logs/metering.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/metering'...
Compiling './lib/python3.5/site-packages/metering/DataFunctions.py'...
***   File "./lib/python3.5/site-packages/metering/DataFunctions.py", line 82
    print "Getting %s data for %s from %2d/%4d to %2d/%4d" % (period, station_id, start_month, start_year, end_month, end_year)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metering/GeoFunctions.py'...
***   File "./lib/python3.5/site-packages/metering/GeoFunctions.py", line 147
    print "Found %snearest station %.1f miles away at (%.4f, %.4f) - %s, %s" % (nth, closest_station['Distance'], closest_station['Latitude'], closest_station['Longitude'], closest_station['Location'], closest_station['State'])
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metering/command_line.py'...
***   File "./lib/python3.5/site-packages/metering/command_line.py", line 5
    print 'Working'
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/metering/data'...
Listing './lib/python3.5/site-packages/metering/data/Exports'...
Listing './lib/python3.5/site-packages/metering/data/Exports/HOBOWare'...
Listing './lib/python3.5/site-packages/metering/data/Images'...
Listing './lib/python3.5/site-packages/metering/data/Notebooks'...
Listing './lib/python3.5/site-packages/metering/data/Notebooks/HTML'...
Listing './lib/python3.5/site-packages/metering/data/weather'...
Listing './lib/python3.5/site-packages/metering/data/weather/input'...
Compiling './lib/python3.5/site-packages/metering/exports.py'...
***   File "./lib/python3.5/site-packages/metering/exports.py", line 32
    print "No raw data stored:"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/metering/measurements.py'...
***   File "./lib/python3.5/site-packages/metering/measurements.py", line 54
    print 'No data present'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/metering/stats.py'...
***   File "./lib/python3.5/site-packages/metering/stats.py", line 333
    print 'Input either "h" or "b".'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/metering/weather.py'...
***   File "./lib/python3.5/site-packages/metering/weather.py", line 105
    print r, r.json()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metering-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
